# -semantic-metrics-modeling-assistant

./: .gitignore  ACHIEVEMENTS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  ENHANCEMENT_RATIONALE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PROGRESS.md  README.md  pyproject.toml
docs/enhancements/: 01-database-persistence.md  02-bi-integrations.md  03-enhanced-trust-scoring.md  04-mermaid-diagrams.md  05-test-suite.md  06-documentation.md  07-dbt-cloud-api.md  08-git-integration.md  09-packaging.md  10-claude-desktop-setup.md
examples/: USAGE.md  example_metrics.yaml
semantic_metrics/: __init__.py  database.py  exporters.py  server.py  trust_scoring.py
tests/: conftest.py  test_database.py  test_trust_scoring.py
